[UPDATED] CodeApp web site.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>CodeApp GT</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/images/CodeApp.png">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="assets/css/open-iconic-bootstrap.min.css">
@@ -27,7 +27,7 @@
   <link rel="stylesheet" href="assets/css/icomoon.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <meta name="google" value="notranslate">
-<link rel="stylesheet" href="styles.09e2c710755c8867a460.css"></head>
+<link rel="stylesheet" href="styles.4e7ccaba6bfd5fe0d343.css"></head>
 <body>
   <div class="KW_progressContainer">
     <div class="KW_progressBar">
@@ -53,5 +53,5 @@
   <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>-->
   <!--<script src="assets/js/google-map.js"></script>-->
   <script src="assets/js/main.js"></script>
-<script src="runtime.e227d1a0e31cbccbf8ec.js" defer></script><script src="polyfills.a4021de53358bb0fec14.js" defer></script><script src="main.ff6d75bf554d4aa5d7c0.js" defer></script></body>
+<script src="runtime.e227d1a0e31cbccbf8ec.js" defer></script><script src="polyfills.a4021de53358bb0fec14.js" defer></script><script src="main.d6759e326125fd7ae9e1.js" defer></script></body>
 </html>
